chore: update bot-helper

--- a/CDN/Bot/GGMeet/tv.css
+++ b/CDN/Bot/GGMeet/tv.css
@@ -1,1 +1,1 @@
-video{transition:filter 1s,opacity 1s}
+html{margin:0}div[class=CW4Opc]{display:none!important}div[class=d7iDfe\ NONs6c],div[class=M12Gmc],div[class=gcPOod][jscontroller=wBfZZe],div[jsname=WjL7X] button[aria-label=More\ options]{opacity:.5}
